# advent-of-code-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/advent_of_code/: CMakeLists.txt
src/year_2021/: CMakeLists.txt
src/year_2021/day_01/: CMakeLists.txt  solution.cpp
src/year_2021/day_01/include/advent_of_code_2021_day_01/: solution.h
src/year_2021/day_02/: CMakeLists.txt  solution.cpp
src/year_2021/day_03/: CMakeLists.txt  solution.cpp
src/year_2021/day_04/: CMakeLists.txt  solution.cpp
src/year_2021/day_05/: CMakeLists.txt  solution.cpp
src/year_2021/day_06/: CMakeLists.txt  solution.cpp
src/year_2021/day_06/include/advent_of_code_2021_day_06/: solution.h
tests/: CMakeLists.txt
tests/common/: utils.cpp  utils.h
tests/year_2021/: CMakeLists.txt  day_01_tests.cpp  test_day_01.cpp
tests/year_2021/day_01/: CMakeLists.txt  test_day_01.cpp
tests/year_2021/day_02/: CMakeLists.txt  test_day_02.cpp
tests/year_2021/day_03/: CMakeLists.txt  test_day_03.cpp
tests/year_2021/day_04/: CMakeLists.txt  test_day_04.cpp
tests/year_2021/day_05/: CMakeLists.txt  test_day_05.cpp
tests/year_2021/day_06/: CMakeLists.txt  test_day_06.cpp
